tests/lean/choice_expl.lean.expected.out
pr : Π {A : Type u_1}, A → A → A
pr a b : N
choice_expl.lean:15:6: error: ambiguous overload, possible interpretations
  N2.pr a b
  N1.pr a b
Additional information:
choice_expl.lean:15:6: context: switched to basic overload resolution where arguments are elaborated without any information about the expected type because expected type was not available
